--- a/index.html
+++ b/index.html
@@ -76,5 +76,11 @@
         </table>
     </div>
     <script src="scripts.js"></script>
+    <footer class="footer">
+        <p><a href="mailto:angginyans@mhs.unimed.ac.id">Contact us</a></p>
+        <p>Angginy Akhirunnisa Siregar</p>
+        <p>Khairun Nadiah</p>
+        <p>Citra</p>
+    </footer>
 </body>
 </html>
