--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div>
                 <canvas id="lineChart"></canvas>
             </div>
-            <div>
+            <div class="pieChart">
                 <canvas id="pieChart"></canvas>
             </div>
         </div>
